portfolio name changed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Sukhala Analyst's Alamanac </h1>
+						<h1>Sukhala's Analyst Portfolio </h1>
 						<p>Harnessing the Power of Data: Journey of a Beginner Analyst <a href="https://www.linkedin.com/in/amandeep-sukhala-98b009168/">@Asukhala Analyst</a>
 						</p>
 						<ul class="actions">
