--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Sukhala's Analyst Portfolio </h1>
-						<p>Harnessing the Power of Data: Journey of a Beginner Analyst <a href="https://www.linkedin.com/in/amandeep-sukhala-98b009168/">@Asukhala Analyst</a>
+						<p>Harnessing the Power of Data: Journey of an Analyst <a href="https://www.linkedin.com/in/amandeep-sukhala-98b009168/">@Asukhala Analyst</a>
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
