--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
 									<li><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="button large">View Project</a></li>
 								</ul>
 							</article>
+							<article class="post featured">
+								<header class="major">
+
+									<h2><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx">Excel Dashboard<br />
+									</a></h2>
+									<p>Creating Dashboard in Excel using Power Query to clean the Data.</p>
+								</header>
+								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/saless.webp" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="button large">View Project</a></li>
+								</ul>
+							</article>
 						
 
 				
