--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 							<article>
 								<header class="major">
 
-									<h2><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx">Excel Dashboard<br />
+									<h2><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx">Excel Projects<br />
 									</a></h2>
-									<p>Creating Dashboard in Excel using Power Query to clean the Data.</p>
+									<p>Please find all the Excel projects and dashboards.</p>
 								</header>
 								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/saless.webp" alt="" /></a>
 								<ul class="actions special">
@@ -66,9 +66,9 @@
 							<article>
 								<header class="major">
 
-									<h2><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx">Excel Dashboard<br />
+									<h2><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx">Tableau Projects<br />
 									</a></h2>
-									<p>Creating Dashboard in Excel using Power Query to clean the Data.</p>
+									<p>List of all tableau projects.</p>
 								</header>
 								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/saless.webp" alt="" /></a>
 								<ul class="actions special">
