--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									</a></h2>
 									<p>List of all tableau projects.</p>
 								</header>
-								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/saless.webp" alt="" /></a>
+								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/https://github.com/Asukhala/AnalystProjects.github.io/blob/main/images/Tableau-Emblem.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="button large">View Project</a></li>
 								</ul>
