--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
 									<h2><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx">Tableau Projects<br />
 									</a></h2>
-									<p>List of all tableau projects.</p>
+									<p>List of all Power BI projects.</p>
 								</header>
-								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/Tableau-Emblem.png" alt="" /></a>
+								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/Power-BI-Desktop-Feature-image.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="button large">View Project</a></li>
 								</ul>
