--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+f<!DOCTYPE HTML>
 <!--
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
@@ -72,7 +72,8 @@
 								</header>
 								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/Power-BI-Desktop-Feature-image.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="button large">View Project</a></li>
+									<br />
+									<li><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="button large"> <br />View Project</a></li>
 								</ul>
 							</article>
 						</section>
