--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@ f<!DOCTYPE HTML>
 							<article>
 								<header class="major">
 
-									<h2><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx">Tableau Projects<br />
+									<h2><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx">Power BI Projects<br />
 									</a></h2>
 									<p>List of all Power BI projects.</p>
 								</header>
 								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/Power-BI-Desktop-Feature-image.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li> <a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="button large"> View Project</a></li>
+									<li> <a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="button large">View Project</a></li>
 								</ul>
 							</article>
 						</section>
