--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ f<!DOCTYPE HTML>
 							<article>
 								<header class="major">
 
-									<h2><a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx">Power BI Projects<br />
+									<h2><a href="https://github.com/Asukhala/Power-BI-projects/blob/main/Superstore%20Sales%20Scorecard%20Data%20Model.pbix">Power BI Projects<br />
 									</a></h2>
 									<p>List of all Power BI projects.</p>
 								</header>
