--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ f<!DOCTYPE HTML>
 									</a></h2>
 									<p>List of all Power BI projects.</p>
 								</header>
-								<a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="image main"><img src="images/Power-BI-Desktop-Feature-image.jpg" alt="" /></a>
+								<a href="https://github.com/Asukhala/Power-BI-projects/blob/main/Superstore%20Sales%20Scorecard%20Data%20Model.pbix" class="image main"><img src="images/Power-BI-Desktop-Feature-image.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li> <a href="https://github.com/Asukhala/Vrinda-Store-Analysis/blob/main/Vrinda%20Store%20Data%20Analysis.xlsx" class="button large">View Project</a></li>
+									<li> <a href="https://github.com/Asukhala/Power-BI-projects/blob/main/Superstore%20Sales%20Scorecard%20Data%20Model.pbix" class="button large">View Project</a></li>
 								</ul>
 							</article>
 						</section>
