--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ f<!DOCTYPE HTML>
 								<ul class="icons alt">
 									
 									<li><a href="https://github.com/Asukhala" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/amandeepsukhala-analyst/" class="icon brands alt fa-github"><span class="label">Linkedin</span></a></li>
 								</ul>
 							</section>
 						</section>
